# korean-typing-game

./: .gitignore  CMakeLists.txt  README.md
scripts/: main.cpp
scripts/classes/: key_controller.cpp
